--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ setup_requires =
     pytest-runner
     setuptools >=38.3
 install_requires =
-    pyapp >=4.0
+    pyapp-messaging
     aio-pika >= 5.0
 tests_require =
     mock
