Updated to use the simplified pyApp-Messaging interfaces in 0.2

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ setup_requires =
     pytest-runner
     setuptools >=38.3
 install_requires =
-    pyapp-messaging
+    pyapp-messaging >= 0.2
     aio-pika >= 5.0
 tests_require =
     mock
